# VibeTerm

./: .coderabbit.yaml  .gitignore  CLAUDE.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-br.md  README.ru.md  README.tr.md  README.vi.md  README.zh-hant.md  README.zh.md  THIRD-PARTY-NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/release/: SKILL.md
.github/review-bot-rules/: README.md  cjk-first-class.md  config-isolation.md  i18n-completeness.md  no-hardcoded-real-paths.md  theme-ansi-immutable.md  zero-intrusion.md
.github/workflows/: ci.yml  deploy-site.yml  nightly.yml  release.yml  update-homebrew.yml
docs/: CJK_SHOWDOWN.md  features-cmux-borrowed.md  features.md  release-and-updates.md
e2e/: WINDOWS_E2E.md  package.json  playwright.config.ts  smoke.spec.ts  tauri-cdp.config.ts  wdio.windows.conf.ts
e2e/specs/: tauri-A-tasks.spec.ts  tauri-B-palette.spec.ts  tauri-C-settings.spec.ts  tauri-D-terminal.spec.ts  tauri-E-split.spec.ts  tauri-F-misc.spec.ts  tauri-G-floating.spec.ts  tauri-H-osc133.spec.ts  tauri-I-prompts.spec.ts  tauri-J-startup.spec.ts
e2e/specs/helpers/: tauri-fixture.ts
homebrew/Casks/: vibeterm.rb
scripts/: build-sounds.py  bump-version.py  check-i18n.mjs  fix-launchpad.sh  gen-readme.py  smoke-app.sh  update-model-data.py
site/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
site/public/: CNAME
site/scripts/: check-i18n.mjs
site/src/components/: Footer.astro  Landing.astro  Nav.astro  ThemeStyles.astro
site/src/components/hero/: Hero.astro  hero.client.ts
site/src/components/sections/: Cjk.astro  Credits.astro  Download.astro  Features.astro  Mechanism.astro  Principles.astro  Themes.astro
site/src/data/: cjk-showdown.ts  credits.ts  features.ts  themes.ts
site/src/i18n/: index.ts
site/src/i18n/locales/: de.json  en.json  es.json  fr.json  id.json  it.json  ja.json  ko.json  pt-br.json  ru.json  tr.json  vi.json  zh-hant.json  zh.json
site/src/layouts/: Base.astro
site/src/lib/: motion.ts  site.ts  theme.ts
site/src/pages/[lang]/: index.astro
site/src/styles/: global.css  tokens.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.nightly.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/vibeterm-agent-watch/: Cargo.toml
src-tauri/crates/vibeterm-agent-watch/src/: lib.rs  provider.rs
src-tauri/crates/vibeterm-agent-watch/src/claude/: blocks.rs  claude_config.rs  litellm_snapshot.json  mod.rs  pricing.rs  project.rs  usage_cache.rs
src-tauri/crates/vibeterm-agent-watch/src/codex/: blocks.rs  mod.rs  session.rs
src-tauri/crates/vibeterm-agent-watch/src/stats/: claude_scan.rs  codex_scan.rs  mod.rs
src-tauri/crates/vibeterm-config/: Cargo.toml
src-tauri/crates/vibeterm-config/src/: actions.rs  env.rs  keybindings.rs  layouts.rs  lib.rs  notify_prefs.rs  prompts.rs  statusline.rs  theme.rs
src-tauri/crates/vibeterm-config/tests/: atomic.rs  clipboard_images.rs
src-tauri/crates/vibeterm-core/: Cargo.toml
src-tauri/crates/vibeterm-core/src/: lib.rs  tasks.rs  terminals.rs
src-tauri/crates/vibeterm-core/tests/: flows.rs
src-tauri/crates/vibeterm-git/: Cargo.toml
src-tauri/crates/vibeterm-git/src/: lib.rs
src-tauri/crates/vibeterm-git/tests/: integration.rs
src-tauri/crates/vibeterm-ipc/: Cargo.toml
src-tauri/crates/vibeterm-ipc/src/: lib.rs
src-tauri/crates/vibeterm-ipc/tests/: ts_mirror_sync.rs
src-tauri/crates/vibeterm-pty/: Cargo.toml
src-tauri/crates/vibeterm-pty/src/: lib.rs
src-tauri/crates/vibeterm-pty/tests/: multi_sink.rs  pty_lifecycle.rs
src-tauri/crates/vibeterm-status/: Cargo.toml
src-tauri/crates/vibeterm-status/benches/: status_detector.rs
src-tauri/crates/vibeterm-status/src/: agent.rs  lib.rs
src-tauri/crates/vibeterm-status/tests/: status_e2e.rs
src-tauri/crates/vibeterm-tasks/: Cargo.toml
src-tauri/crates/vibeterm-tasks/src/: lib.rs
src-tauri/crates/vibeterm-tasks/tests/: persist.rs
src-tauri/icons/: icon.icns
src-tauri/resources/sounds/: sounds.json
src-tauri/src/: agent_ipc.rs  background.rs  clipboard_files.rs  config_ipc.rs  events.rs  git_ipc.rs  main.rs  menu.rs  notify.rs  pty_ipc.rs  state.rs  tasks_ipc.rs  ts_export.rs  updates.rs  window_ipc.rs
src-tauri/src/shell-hooks/zdotdir/: zlogin  zprofile  zshenv  zshrc
web/: tsconfig.base.json
