# 配置文件加载 / schema 校验 / 热加载
[package]
name = "vibeterm-config"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde     = { workspace = true }
serde_json = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }
toml      = "0.8"
dirs      = "5"
notify    = "6"
tempfile  = "3"

[dev-dependencies]
filetime  = "0.2"
toml      = "0.8"
