# PTY 抽象
# 叶子 crate:不依赖任何业务 crate
[package]
name = "vibeterm-pty"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
portable-pty = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
