# PTY 抽象
# 叶子 crate:不依赖任何业务 crate
[package]
name = "vibeterm-pty"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
portable-pty = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }

# Drop kill 升级链(SIGHUP→500ms→SIGKILL)的 SIGKILL 兜底
[target.'cfg(unix)'.dependencies]
libc = "0.2"
