# 状态嗅探
[package]
name = "vibeterm-status"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
vibeterm-ipc = { workspace = true }
tracing      = { workspace = true }
regex        = "1"
serde        = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "status_detector"
harness = false
